acrescentado códigos javascript

--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
   <script src="script/loguin.js" type="module"></script>
   <script src="script/script.js" defer></script>
   <script src="./script/audiogravador.js"></script>
+  <script src="script/conversor.js"></script>
   <script>
       function logar(){
           var login = document.getElementById('login').value;
